src/objects/Script__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acf_Question_Type__c</fullName>
        <description>Click Loans</description>
        <label>Question Type</label>
        <picklist>
            <controllingField>acf_Type__c</controllingField>
            <picklistValues>
                <fullName>Property Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets and Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Details</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acf_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Script</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acf_Sequence_no__c</fullName>
        <description>Click Loans</description>
        <label>Sequence no</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_Stage_Name__c</fullName>
        <description>Click Loans</description>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Type__c</fullName>
        <description>Click Loans</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Login</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Click Loans Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acf_Question_Type__c</columns>
        <columns>acf_Sequence_no__c</columns>
        <columns>acf_Stage_Name__c</columns>
        <columns>acf_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Script-{0000}</displayFormat>
        <label>Script Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script</pluralLabel>
    <recordTypes>
        <fullName>Post_Login</fullName>
        <active>true</active>
        <label>Post-Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Login</fullName>
        <active>true</active>
        <label>Pre-Login</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>